--- a/package.json
+++ b/package.json
@@ -9,13 +9,13 @@
     "scrape-pokeapi:local": "API=http://localhost:8000/api/v2/ npm run -s scrape-pokeapi",
     "fetch-images": "ts-node --project ./bin/tsconfig.json ./bin/fetch-images.ts",
     "upgrade": "npm-check -u",
-    "start": "webpack-dev-server --mode development",
-    "prebuild": "rimraf dist",
-    "build": "webpack --mode production",
     "_pretty": "prettier \"src/**/*.{ts,tsx,js}\"",
     "pretty:fix": "npm run -s _pretty -- --write",
     "pretty:test": "npm run -s _pretty -- --check",
-    "test": "npm run -s pretty:test"
+    "test": "npm run -s pretty:test",
+    "build": "next build && next export",
+    "start": "next dev",
+    "lint": "next lint"
   },
   "repository": {
     "type": "git",
@@ -33,14 +33,14 @@
     "@types/match-sorter": "^4.0.0",
     "@types/node": "^13.13.4",
     "@types/node-fetch": "^2.5.10",
-    "@types/react": "^16.9.34",
+    "@types/react": "^16.14.8",
     "@types/react-dom": "^16.9.7",
-    "@types/react-router-dom": "^5.1.7",
     "@types/webpack-env": "^1.16.0",
     "copy-webpack-plugin": "^6.4.1",
     "css-loader": "^3.5.3",
     "css-minimizer-webpack-plugin": "^1.3.0",
     "eslint": "^6.8.0",
+    "eslint-config-next": "^11.0.1",
     "glob": "^7.1.7",
     "html-webpack-plugin": "^4.3.0",
     "mini-css-extract-plugin": "^1.6.0",
@@ -49,23 +49,18 @@
     "prettier": "^2.3.1",
     "purgecss-webpack-plugin": "^4.0.3",
     "rimraf": "^3.0.2",
-    "ts-loader": "^7.0.2",
     "ts-node": "^8.9.1",
-    "typescript": "^3.8.3",
-    "webpack": "^4.43.0",
-    "webpack-bundle-analyzer": "^4.4.2",
-    "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.11.2"
+    "typescript": "^4.3.4"
   },
   "dependencies": {
     "@types/papaparse": "^5.2.5",
     "classnames": "^2.3.1",
     "fastest-levenshtein": "^1.0.12",
     "match-sorter": "^4.1.0",
+    "next": "^11.0.1",
     "papaparse": "^5.3.1",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
-    "react-router-dom": "^5.2.0",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
     "tachyons": "^4.12.0"
   }
 }
