--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,18 +1,31 @@
 {
   "compilerOptions": {
-    "moduleResolution": "node",
-    "forceConsistentCasingInFileNames": true,
     "allowJs": true,
-    "outDir": "build",
+    "allowUmdGlobalAccess": false,
+    "esModuleInterop": true,
+    "forceConsistentCasingInFileNames": true,
+    "jsx": "preserve",
+    "lib": [
+      "dom",
+      "dom.iterable",
+      "esnext"
+    ],
+    "module": "es2020",
+    "moduleResolution": "node",
+    "noEmit": true,
+    "resolveJsonModule": true,
+    "skipLibCheck": true,
     "sourceMap": true,
     "strict": true,
-    "module": "es2020",
     "target": "es2019",
-    "jsx": "react",
-    "allowSyntheticDefaultImports": true,
-    "esModuleInterop": true,
-    "allowUmdGlobalAccess": false
+    "isolatedModules": true
   },
-  "include": ["src", "bin"],
-  "exclude": ["node_modules"]
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx"
+  ],
+  "exclude": [
+    "node_modules"
+  ]
 }
