--- a/package.json
+++ b/package.json
@@ -35,8 +35,6 @@
     "@types/match-sorter": "^4.0.0",
     "@types/node": "^13.13.4",
     "@types/node-fetch": "^2.5.10",
-    "@types/react": "^16.9.34",
-    "@types/react-dom": "^16.9.7",
     "@types/react-router-dom": "^5.1.7",
     "@types/webpack-env": "^1.16.0",
     "@typescript-eslint/eslint-plugin": "^4.28.0",
@@ -45,8 +43,7 @@
     "css-loader": "^3.5.3",
     "css-minimizer-webpack-plugin": "^1.3.0",
     "eslint": "^7.29.0",
-    "eslint-plugin-react": "^7.24.0",
-    "eslint-plugin-react-hooks": "^4.2.0",
+    "eslint-config-preact": "^1.1.4",
     "glob": "^7.1.7",
     "html-webpack-plugin": "^4.3.0",
     "jsdom": "^16.6.0",
@@ -72,8 +69,7 @@
     "fastest-levenshtein": "^1.0.12",
     "match-sorter": "^4.1.0",
     "papaparse": "^5.3.1",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
+    "preact": "^10.5.14",
     "react-router-dom": "^5.2.0",
     "tachyons": "^4.12.0"
   }
