--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
     "module": "es2020",
     "target": "es2019",
     "jsx": "react",
+    "jsxFactory": "h",
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
     "allowUmdGlobalAccess": false,
